--- a/css/csvtable-white.css
+++ b/css/csvtable-white.css
@@ -9,7 +9,7 @@ html {
 	font-family: Min;
 	src: url('Min.otf');
   font-family: gothic;
-  src: url('/launch/css/GOTHIC.TTF');
+  src: url('GOTHIC.TTF');
 }
 
 
