--- a/css/csvtable-grey.css
+++ b/css/csvtable-grey.css
@@ -36,7 +36,7 @@ TABLE.CSVTable {
 .smaller {
 	font-size: 1.2em gothic;
 	color: rgb();
-	line-height: 2px;
+	line-height: 1em;
 	vertical-align: baseline;
 }
 
