--- a/css/csvtable-white.css
+++ b/css/csvtable-white.css
@@ -25,7 +25,7 @@ div {
 
 /* CSV Table Classes */
 TABLE.CSVTable {
-	font: 1.2em gothic;
+	font: .90em gothic;
 	border-collapse: collapse;
 	width: 100%;
 	color: rgba();
@@ -39,7 +39,7 @@ TABLE.CSVTable {
 
 /* Header */
 .smaller {
-	font-size: 1.3em gothic;
+	font-size: 1em gothic;
 	line-height: 1em;
 	vertical-align: top;
 }
@@ -67,7 +67,7 @@ TABLE.CSVTable THEAD TR {
 }
 TABLE.CSVTable TH {
 	font-family: gothic;
-	font-size: 1.5em;
+	font-size: 1em;
 }
 
 /* Table Cells */
